[Implemented login logic]